1106 Submit Answer, will clean extra code

--- a/EAS506 - Data Mining/HW3/HW3_P2.ipynb
+++ b/EAS506 - Data Mining/HW3/HW3_P2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,13 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "QDA\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1      1.000     0.857     0.923         7\n",
@@ -207,23 +208,26 @@
     }
    ],
    "source": [
+    "\n",
     "# Apply QDA\n",
     "\n",
     "qda = QuadraticDiscriminantAnalysis()\n",
     "qda_model = qda.fit(train_set, train_set_labels)\n",
     "pred2=qda_model.predict(test_set)\n",
+    "print(\"QDA\")\n",
     "print(classification_report(test_set_labels, pred2, digits=3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "LDA\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           1      1.000     0.962     0.980        26\n",
@@ -240,13 +244,14 @@
    "source": [
     "# Predicting on training set\n",
     "pred2=qda_model.predict(train_set)\n",
+    "print(\"LDA\")\n",
     "\n",
     "print(classification_report(train_set_labels, pred2, digits=3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
