#1202 DataMining HW4 Q1,2,4,5 done, written report required

--- a/EAS506 - Data Mining/HW4/HW4_Q4.ipynb
+++ b/EAS506 - Data Mining/HW4/HW4_Q4.ipynb
@@ -9,29 +9,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#random forest classification\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +37,307 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column1</th>\n",
+       "      <th>Column2</th>\n",
+       "      <th>Column3</th>\n",
+       "      <th>Column4</th>\n",
+       "      <th>Column5</th>\n",
+       "      <th>Column6</th>\n",
+       "      <th>Column7</th>\n",
+       "      <th>Column8</th>\n",
+       "      <th>Column9</th>\n",
+       "      <th>Column10</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Column49</th>\n",
+       "      <th>Column50</th>\n",
+       "      <th>Column51</th>\n",
+       "      <th>Column52</th>\n",
+       "      <th>Column53</th>\n",
+       "      <th>Column54</th>\n",
+       "      <th>Column55</th>\n",
+       "      <th>Column56</th>\n",
+       "      <th>Column57</th>\n",
+       "      <th>Column58</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "      <td>4601.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>0.104553</td>\n",
+       "      <td>0.213015</td>\n",
+       "      <td>0.280656</td>\n",
+       "      <td>0.065425</td>\n",
+       "      <td>0.312223</td>\n",
+       "      <td>0.095901</td>\n",
+       "      <td>0.114208</td>\n",
+       "      <td>0.105295</td>\n",
+       "      <td>0.090067</td>\n",
+       "      <td>0.239413</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.038575</td>\n",
+       "      <td>0.139030</td>\n",
+       "      <td>0.016976</td>\n",
+       "      <td>0.269071</td>\n",
+       "      <td>0.075811</td>\n",
+       "      <td>0.044238</td>\n",
+       "      <td>5.191515</td>\n",
+       "      <td>52.172789</td>\n",
+       "      <td>283.289285</td>\n",
+       "      <td>0.394045</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>0.305358</td>\n",
+       "      <td>1.290575</td>\n",
+       "      <td>0.504143</td>\n",
+       "      <td>1.395151</td>\n",
+       "      <td>0.672513</td>\n",
+       "      <td>0.273824</td>\n",
+       "      <td>0.391441</td>\n",
+       "      <td>0.401071</td>\n",
+       "      <td>0.278616</td>\n",
+       "      <td>0.644755</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.243471</td>\n",
+       "      <td>0.270355</td>\n",
+       "      <td>0.109394</td>\n",
+       "      <td>0.815672</td>\n",
+       "      <td>0.245882</td>\n",
+       "      <td>0.429342</td>\n",
+       "      <td>31.729449</td>\n",
+       "      <td>194.891310</td>\n",
+       "      <td>606.347851</td>\n",
+       "      <td>0.488698</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.588000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.065000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.276000</td>\n",
+       "      <td>15.000000</td>\n",
+       "      <td>95.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.420000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.380000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.160000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.188000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.315000</td>\n",
+       "      <td>0.052000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.706000</td>\n",
+       "      <td>43.000000</td>\n",
+       "      <td>266.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>4.540000</td>\n",
+       "      <td>14.280000</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>42.810000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>5.880000</td>\n",
+       "      <td>7.270000</td>\n",
+       "      <td>11.110000</td>\n",
+       "      <td>5.260000</td>\n",
+       "      <td>18.180000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.385000</td>\n",
+       "      <td>9.752000</td>\n",
+       "      <td>4.081000</td>\n",
+       "      <td>32.478000</td>\n",
+       "      <td>6.003000</td>\n",
+       "      <td>19.829000</td>\n",
+       "      <td>1102.500000</td>\n",
+       "      <td>9989.000000</td>\n",
+       "      <td>15841.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8 rows × 58 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Column1      Column2      Column3      Column4      Column5  \\\n",
+       "count  4601.000000  4601.000000  4601.000000  4601.000000  4601.000000   \n",
+       "mean      0.104553     0.213015     0.280656     0.065425     0.312223   \n",
+       "std       0.305358     1.290575     0.504143     1.395151     0.672513   \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "50%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "75%       0.000000     0.000000     0.420000     0.000000     0.380000   \n",
+       "max       4.540000    14.280000     5.100000    42.810000    10.000000   \n",
+       "\n",
+       "           Column6      Column7      Column8      Column9     Column10  ...  \\\n",
+       "count  4601.000000  4601.000000  4601.000000  4601.000000  4601.000000  ...   \n",
+       "mean      0.095901     0.114208     0.105295     0.090067     0.239413  ...   \n",
+       "std       0.273824     0.391441     0.401071     0.278616     0.644755  ...   \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+       "50%       0.000000     0.000000     0.000000     0.000000     0.000000  ...   \n",
+       "75%       0.000000     0.000000     0.000000     0.000000     0.160000  ...   \n",
+       "max       5.880000     7.270000    11.110000     5.260000    18.180000  ...   \n",
+       "\n",
+       "          Column49     Column50     Column51     Column52     Column53  \\\n",
+       "count  4601.000000  4601.000000  4601.000000  4601.000000  4601.000000   \n",
+       "mean      0.038575     0.139030     0.016976     0.269071     0.075811   \n",
+       "std       0.243471     0.270355     0.109394     0.815672     0.245882   \n",
+       "min       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "25%       0.000000     0.000000     0.000000     0.000000     0.000000   \n",
+       "50%       0.000000     0.065000     0.000000     0.000000     0.000000   \n",
+       "75%       0.000000     0.188000     0.000000     0.315000     0.052000   \n",
+       "max       4.385000     9.752000     4.081000    32.478000     6.003000   \n",
+       "\n",
+       "          Column54     Column55     Column56      Column57     Column58  \n",
+       "count  4601.000000  4601.000000  4601.000000   4601.000000  4601.000000  \n",
+       "mean      0.044238     5.191515    52.172789    283.289285     0.394045  \n",
+       "std       0.429342    31.729449   194.891310    606.347851     0.488698  \n",
+       "min       0.000000     1.000000     1.000000      1.000000     0.000000  \n",
+       "25%       0.000000     1.588000     6.000000     35.000000     0.000000  \n",
+       "50%       0.000000     2.276000    15.000000     95.000000     0.000000  \n",
+       "75%       0.000000     3.706000    43.000000    266.000000     1.000000  \n",
+       "max      19.829000  1102.500000  9989.000000  15841.000000     1.000000  \n",
+       "\n",
+       "[8 rows x 58 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "spam_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,25 +356,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_forest( trees, random_estimators):\n",
+    "    model = RandomForestClassifier(n_estimators = trees ,  max_features = random_estimators, oob_score = True) \n",
+    "    model.fit(predictor_train, target_train)\n",
+    "    target_predict = model.predict(predictor_test) \n",
+    "    print(\"OOB SCORE \" , model.oob_score_)\n",
+    "    print(\"TEST Accuracy\" , accuracy_score(target_test, target_predict))\n",
+    "# random_forest(1000, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.9761129207383279"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOB SCORE  0.9595108695652174\n",
+      "TEST Accuracy 0.9467969598262758\n"
+     ]
     }
    ],
    "source": [
-    "model = RandomForestClassifier(n_estimators = 1000)\n",
-    "model.fit(predictor_train, target_train)\n",
-    "target_predict = model.predict(predictor_test)\n",
-    "accuracy_score(target_test, target_predict)"
+    "random_forest(1000, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOB SCORE  0.9570652173913043\n",
+      "TEST Accuracy 0.9478827361563518\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_forest(1000, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOB SCORE  0.9573369565217391\n",
+      "TEST Accuracy 0.9478827361563518\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_forest(1000, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OOB SCORE  0.95625\n",
+      "TEST Accuracy 0.9413680781758957\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_forest(1000, 10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackabuse.com/random-forest-algorithm-with-python-and-scikit-learn/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/35578041/why-do-i-get-different-randomforest-outcomes-between-r-and-python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://stackoverflow.com/questions/29290916/scikit-learn-random-forest-classifier-how-to-produce-a-plot-of-oob-error-agains"
    ]
   }
  ],
